--- a/LCA Analysis Initial Filtering.ipynb
+++ b/LCA Analysis Initial Filtering.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "There's a massive amount of data in this .xlsx file (over 500,000 rows). It contains all LCA requests from the year 2014. My first goal is to extract it from Excel format, drop rows and columns that I won't need, and write it to a csv for easier access.\n",
     "\n",
-    "I originally planned to use the past 3 years of data, but that was simply too much for my little 13' Mac to handle. :("
+    "I originally planned to use the past 3 years of data, but that was simply too much for my 13\" Mac to handle. :("
    ]
   },
   {
@@ -212,39 +212,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LCA_CASE_EMPLOYER_ADDRESS       LCA_CASE_EMPLOYER_POSTAL_CODE\n",
-      "#1 CHILDREN'S WAY               72202                             1\n",
-      "#1 HIGHLANDER WAY               33853                             1\n",
-      "#1 SMOKY VALLEY MINE ROAD       89045                             2\n",
-      "#16-529 WEST 48TH ST            10019                             1\n",
-      "#2 JOHN BREWERS BAY             00802                             3\n",
-      "#2 SAINT ANTHONY'S WAY          62002                             1\n",
-      "#202, 5609 COLLEGE AVE          94618                             2\n",
-      "#233, 75 BROADWAY               94111                            22\n",
-      "#3 NATURAL RESOURCES DRIVE      72215                             3\n",
-      "#3 RESEARCH PARK DRIVE          63304                             1\n",
-      "#48 PR STATE ROAD 165 KM 1.2    00968                             1\n",
-      "#5 STATEHOUSE PLAZA, SUITE 500  72201                             1\n",
-      "#50 COUNTY ROAD 13              87013                             1\n",
-      "#6 CITYPLACE DRIVE              63141                             2\n",
-      "#6, ROCK ISLAND                 73401                             2\n",
-      "...\n",
-      "YALE UNIVERSITY            06520                              1\n",
-      "YALE UNIVERSITY  / OISS    06520                              2\n",
-      "YALE UNIVERSITY / OISS     06520                             19\n",
-      "YALE UNIVERSITY OISS       06520                              7\n",
-      "YALE UNIVERSITY, OISS      06520                              2\n",
-      "YALE UNIVERSITY/  OISS     06520                              2\n",
-      "YALE UNIVERSITY/ O ISS     06520                              1\n",
-      "YALE UNIVERSITY/ OISS      06520                             66\n",
-      "                           06525                              1\n",
-      "                           0T652                              1\n",
-      "YALE UNIVERSITY/OISS       05620                              1\n",
-      "                           06510                              1\n",
-      "                           06520                            107\n",
-      "YMCA BUILDING  ROOM 101A   77843                              1\n",
-      "ZACHARY TAYLOR CIRCLE      20171                              1\n",
-      "Length: 65007, dtype: int64\n"
+      "LCA_CASE_EMPLOYER_ADDRESS                         LCA_CASE_EMPLOYER_POSTAL_CODE\n",
+      "#1 CHILDREN'S WAY                                 72202                              1\n",
+      "#1 HIGHLANDER WAY                                 33853                              1\n",
+      "#1 SMOKY VALLEY MINE ROAD                         89045                              2\n",
+      "#16-529 WEST 48TH ST                              10019                              1\n",
+      "#2 JOHN BREWERS BAY                               00802                              3\n",
+      "#2 SAINT ANTHONY'S WAY                            62002                              1\n",
+      "#202, 5609 COLLEGE AVE                            94618                              2\n",
+      "#233, 75 BROADWAY                                 94111                             22\n",
+      "#3 NATURAL RESOURCES DRIVE                        72215                              3\n",
+      "#3 RESEARCH PARK DRIVE                            63304                              1\n",
+      "#48 PR STATE ROAD 165 KM 1.2                      00968                              1\n",
+      "#5 STATEHOUSE PLAZA, SUITE 500                    72201                              1\n",
+      "#50 COUNTY ROAD 13                                87013                              1\n",
+      "#6 CITYPLACE DRIVE                                63141                              2\n",
+      "#6, ROCK ISLAND                                   73401                              2\n",
+      "% DAVID MILLER                                    40204                              1\n",
+      "*HQ, THE LANDMARK @ ONE MARKET STREET, SUITE 300  94105                              2\n",
+      "0-44 SADDLE RIVER ROAD                            07410                              1\n",
+      "02 WEST 45TH STREET                               10036                              1\n",
+      "025 SW SHERMAN STREET                             97201                              2\n",
+      "0615 SW PALATINE HILL ROAD                        97219                              1\n",
+      "1 AARONSON DRIVE                                  21061                              4\n",
+      "1 AAVID CIRCLE                                    03246                              5\n",
+      "1 ADP BOULEVARD                                   07068                             31\n",
+      "1 AGRAND STREET                                   01607                              1\n",
+      "1 AIRPORT PLACE, SUITE 3                          08540                              1\n",
+      "1 AKRON GENERAL AVENUE                            44307                              2\n",
+      "1 ALBERTSON AVE                                   11507                              4\n",
+      "1 ALEWIFE CENTER SUITE 200                        02140                              1\n",
+      "1 ALEXANDER PLACE                                 11542                              7\n",
+      "                                                                                  ... \n",
+      "WOODBRIDGE CORPORATE PLAZA                        08830                              4\n",
+      "WOODLAND ROAD                                     15232                              1\n",
+      "WOODMEN TOWER                                     68102                              3\n",
+      "WORLD TRADE CENTER EAST                           02210                              1\n",
+      "WORLDWIDE PLAZA 309  WEST 49TH STREET             10019                              1\n",
+      "WORLDWIDE PLAZA 309 WEST  49TH STREET             10019                              1\n",
+      "WORLDWIDE PLAZA 309 WEST 49TH STREET              10019                             98\n",
+      "                                                  10041                              1\n",
+      "                                                  10281                              3\n",
+      "WORLDWIDE PLAZA 309 WET 49TH STREET               10019                              1\n",
+      "WORLDWIDE PLAZA, 309 WEST 49TH STREET             10019                              3\n",
+      "WORLDWIDE PLAZA,309 WEST 49TH STREET              10019                              1\n",
+      "YALE  UNIVERSITY  / OISS                          06520                              1\n",
+      "YALE  UNIVERSITY / OISS                           06520                              1\n",
+      "YALE  UNIVERSITY/ OISS                            06520                              6\n",
+      "YALE UNIVERSITY                                   06520                              1\n",
+      "YALE UNIVERSITY  / OISS                           06520                              2\n",
+      "YALE UNIVERSITY / OISS                            06520                             19\n",
+      "YALE UNIVERSITY OISS                              06520                              7\n",
+      "YALE UNIVERSITY, OISS                             06520                              2\n",
+      "YALE UNIVERSITY/  OISS                            06520                              2\n",
+      "YALE UNIVERSITY/ O ISS                            06520                              1\n",
+      "YALE UNIVERSITY/ OISS                             06520                             66\n",
+      "                                                  06525                              1\n",
+      "                                                  0T652                              1\n",
+      "YALE UNIVERSITY/OISS                              05620                              1\n",
+      "                                                  06510                              1\n",
+      "                                                  06520                            107\n",
+      "YMCA BUILDING  ROOM 101A                          77843                              1\n",
+      "ZACHARY TAYLOR CIRCLE                             20171                              1\n",
+      "dtype: int64\n"
      ]
     }
    ],
@@ -281,12 +311,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We also need to fix the ZIP Codes by removing values that aren't digits. There are also a few ZIP codes less than 00501 (the lowest ZIP in the country). I could search for the correct code, but in the intrest of time I'll just drop them (it's only a few rows)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "postcode = \"LCA_CASE_EMPLOYER_POSTAL_CODE\"\n",
+    "\n",
+    "raw_df = raw_df[raw_df[postcode].astype(str).str.isdigit()]  # remove rows with invalid ZIP\n",
+    "raw_df[postcode] = raw_df[postcode].astype(int)  # convert to int\n",
+    "raw_df = raw_df[raw_df[postcode] > 500]  # remove rows with invalid ZIP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now, let's check the STATUS column. This is one of the most important columns, displaying the status of each LCA."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -296,12 +348,12 @@
      "output_type": "stream",
      "text": [
       "STATUS\n",
-      "CERTIFIED              451389\n",
+      "CERTIFIED              451336\n",
       "CERTIFIED-WITHDRAWN     36008\n",
-      "DENIED                  11768\n",
+      "DENIED                  11765\n",
       "INVALIDATED                 1\n",
       "REJECTED                    2\n",
-      "WITHDRAWN               15874\n",
+      "WITHDRAWN               15869\n",
       "dtype: int64\n"
      ]
     }
@@ -323,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -342,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -352,25 +404,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       LCA_CASE_WAGE_RATE_FROM  TOTAL_WORKERS          PW_1  \\\n",
-      "count             5.150410e+05  515041.000000  5.150410e+05   \n",
-      "mean              9.243991e+04       1.956689  6.977173e+04   \n",
-      "std               1.021826e+07       5.867164  1.542514e+06   \n",
-      "min               7.010000e+00       1.000000  0.000000e+00   \n",
-      "25%               6.000000e+04       1.000000  5.222900e+04   \n",
-      "50%               7.000000e+04       1.000000  6.333600e+04   \n",
-      "75%               9.000000e+04       1.000000  7.974720e+04   \n",
-      "max               7.278873e+09    2013.000000  8.201323e+08   \n",
+      "       LCA_CASE_EMPLOYER_POSTAL_CODE  LCA_CASE_WAGE_RATE_FROM  TOTAL_WORKERS  \\\n",
+      "count                  514980.000000             5.149800e+05  514980.000000   \n",
+      "mean                    47607.148891             9.244402e+04       1.956802   \n",
+      "std                     33621.774342             1.021886e+07       5.867502   \n",
+      "min                       550.000000             7.010000e+00       1.000000   \n",
+      "25%                     12009.000000             6.000000e+04       1.000000   \n",
+      "50%                     45458.000000             7.000000e+04       1.000000   \n",
+      "75%                     77056.000000             9.000000e+04       1.000000   \n",
+      "max                     99919.000000             7.278873e+09    2013.000000   \n",
       "\n",
-      "       LCA_CASE_NAICS_CODE  \n",
-      "count         5.150410e+05  \n",
-      "mean          4.725340e+05  \n",
-      "std           1.610983e+06  \n",
-      "min           1.100000e+01  \n",
-      "25%           5.182100e+05  \n",
-      "50%           5.415110e+05  \n",
-      "75%           5.415110e+05  \n",
-      "max           8.129908e+08  \n"
+      "               PW_1  LCA_CASE_NAICS_CODE  \n",
+      "count  5.149800e+05         5.149800e+05  \n",
+      "mean   6.977412e+04         4.725347e+05  \n",
+      "std    1.542606e+06         1.611078e+06  \n",
+      "min    0.000000e+00         1.100000e+01  \n",
+      "25%    5.222900e+04         5.182100e+05  \n",
+      "50%    6.333600e+04         5.415110e+05  \n",
+      "75%    7.976350e+04         5.415110e+05  \n",
+      "max    8.201323e+08         8.129908e+08  \n"
      ]
     }
    ],
@@ -387,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -396,25 +448,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       LCA_CASE_WAGE_RATE_FROM  TOTAL_WORKERS          PW_1  \\\n",
-      "count             5.150380e+05  515038.000000  5.150380e+05   \n",
-      "mean              9.244013e+04       1.952788  6.977204e+04   \n",
-      "std               1.021829e+07       5.154741  1.542519e+06   \n",
-      "min               7.010000e+00       1.000000  7.010000e+00   \n",
-      "25%               6.000000e+04       1.000000  5.222900e+04   \n",
-      "50%               7.000000e+04       1.000000  6.333600e+04   \n",
-      "75%               9.000000e+04       1.000000  7.974780e+04   \n",
-      "max               7.278873e+09     200.000000  8.201323e+08   \n",
+      "       LCA_CASE_EMPLOYER_POSTAL_CODE  LCA_CASE_WAGE_RATE_FROM  TOTAL_WORKERS  \\\n",
+      "count                  514977.000000             5.149770e+05  514977.000000   \n",
+      "mean                    47607.127252             9.244424e+04       1.952901   \n",
+      "std                     33621.802222             1.021889e+07       5.155036   \n",
+      "min                       550.000000             7.010000e+00       1.000000   \n",
+      "25%                     12009.000000             6.000000e+04       1.000000   \n",
+      "50%                     45458.000000             7.000000e+04       1.000000   \n",
+      "75%                     77056.000000             9.000000e+04       1.000000   \n",
+      "max                     99919.000000             7.278873e+09     200.000000   \n",
       "\n",
-      "       LCA_CASE_NAICS_CODE  \n",
-      "count         5.150380e+05  \n",
-      "mean          4.725353e+05  \n",
-      "std           1.610988e+06  \n",
-      "min           1.100000e+01  \n",
-      "25%           5.182100e+05  \n",
-      "50%           5.415110e+05  \n",
-      "75%           5.415110e+05  \n",
-      "max           8.129908e+08  \n"
+      "               PW_1  LCA_CASE_NAICS_CODE  \n",
+      "count  5.149770e+05         5.149770e+05  \n",
+      "mean   6.977443e+04         4.725361e+05  \n",
+      "std    1.542610e+06         1.611082e+06  \n",
+      "min    7.010000e+00         1.100000e+01  \n",
+      "25%    5.222900e+04         5.182100e+05  \n",
+      "50%    6.333600e+04         5.415110e+05  \n",
+      "75%    7.976500e+04         5.415110e+05  \n",
+      "max    8.201323e+08         8.129908e+08  \n"
      ]
     }
    ],
@@ -434,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -472,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -511,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -529,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
