--- a/LCA Exploratory Analysis 3.ipynb
+++ b/LCA Exploratory Analysis 3.ipynb
@@ -42,9 +42,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Certified Applications: 472745\n",
-      "Denied Applications: 11029\n",
-      "Percent Denied Applications: 2.28\n"
+      "Certified Applications: 472803\n",
+      "Denied Applications: 10982\n",
+      "Percent Denied Applications: 2.27\n"
      ]
     }
    ],
@@ -132,60 +132,60 @@
      "output_type": "stream",
      "text": [
       "STATE\n",
-      "PR    0.154321\n",
-      "WY    0.134021\n",
-      "GU    0.121547\n",
-      "HI    0.070140\n",
-      "MS    0.070076\n",
+      "PR    0.153374\n",
+      "WY    0.142857\n",
+      "GU    0.122222\n",
+      "HI    0.070850\n",
+      "MS    0.068441\n",
       "VI    0.066667\n",
-      "NM    0.063802\n",
+      "NM    0.064935\n",
       "LA    0.049834\n",
-      "NV    0.047794\n",
+      "NV    0.047750\n",
       "MT    0.041667\n",
-      "AL    0.039791\n",
-      "DC    0.038556\n",
-      "ID    0.037862\n",
-      "FL    0.037612\n",
-      "WV    0.035256\n",
-      "NY    0.034808\n",
-      "ND    0.033708\n",
-      "OK    0.033291\n",
-      "NE    0.030120\n",
+      "AL    0.038613\n",
+      "DC    0.038473\n",
+      "FL    0.037617\n",
+      "ID    0.035556\n",
+      "NY    0.034625\n",
+      "ND    0.034091\n",
+      "OK    0.032602\n",
+      "WV    0.031746\n",
+      "NE    0.030060\n",
       "AK    0.029851\n",
       "SD    0.028708\n",
-      "KY    0.028176\n",
-      "UT    0.028150\n",
-      "CO    0.028091\n",
-      "VT    0.027211\n",
+      "UT    0.028137\n",
+      "KY    0.027778\n",
+      "CO    0.027518\n",
+      "VT    0.026936\n",
       "KS    0.026740\n",
-      "MA    0.025824\n",
-      "MD    0.025638\n",
-      "SC    0.024064\n",
-      "OH    0.022510\n",
-      "CA    0.022472\n",
-      "VA    0.022207\n",
-      "TX    0.021903\n",
-      "AR    0.021678\n",
-      "MI    0.021331\n",
-      "MO    0.020401\n",
-      "OR    0.020043\n",
-      "PA    0.019969\n",
-      "MN    0.019928\n",
-      "NC    0.019662\n",
-      "IL    0.018743\n",
-      "GA    0.018050\n",
-      "AZ    0.017995\n",
-      "NJ    0.017573\n",
-      "TN    0.017170\n",
-      "WI    0.016592\n",
-      "WA    0.016522\n",
-      "CT    0.016470\n",
-      "IN    0.016234\n",
+      "MA    0.025701\n",
+      "MD    0.025632\n",
+      "SC    0.024103\n",
+      "OH    0.022504\n",
+      "CA    0.022419\n",
+      "VA    0.022205\n",
+      "TX    0.021772\n",
+      "MI    0.021329\n",
+      "MO    0.020059\n",
+      "AR    0.020010\n",
+      "PA    0.019983\n",
+      "OR    0.019776\n",
+      "NC    0.019659\n",
+      "MN    0.019319\n",
+      "IL    0.018739\n",
+      "AZ    0.017998\n",
+      "GA    0.017992\n",
+      "NJ    0.017514\n",
+      "TN    0.016699\n",
+      "WI    0.016657\n",
+      "CT    0.016462\n",
+      "WA    0.016457\n",
+      "IN    0.015867\n",
       "ME    0.014634\n",
-      "IA    0.014347\n",
-      "NH    0.014332\n",
+      "IA    0.014373\n",
+      "NH    0.014276\n",
       "RI    0.013276\n",
-      "DE    0.011600\n",
+      "DE    0.011584\n",
       "Name: Denied_prop, dtype: float64\n"
      ]
     }
@@ -220,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "LCA_CASE_NAICS_CODE\n",
-      "54111    0.211180\n",
+      "54111    0.208589\n",
       "5411     0.200000\n",
       "53131    0.156716\n",
       "5412     0.146789\n",
@@ -281,7 +281,7 @@
       "Computer Systems Analysts                0.011984\n",
       "Computer Hardware Engineers              0.011331\n",
       "Computer Occupations, All Other          0.010892\n",
-      "Postsecondary Teachers, All Other        0.006098\n",
+      "Postsecondary Teachers, All Other        0.006173\n",
       "Name: Denied_prop, dtype: float64\n"
      ]
     }
@@ -324,8 +324,8 @@
      "output_type": "stream",
      "text": [
       "FULL_TIME_POS\n",
-      "N    0.05115\n",
-      "Y    0.02125\n",
+      "N    0.049389\n",
+      "Y    0.021189\n",
       "Name: Denied_prop, dtype: float64\n"
      ]
     }
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Those who aren't working full time are twice as likely to be denied. Let's keep digging and examine wages and units of pay."
+    "Those who aren't working full time are more than twice as likely to be denied. Let's keep digging and examine wages and units of pay."
    ]
   },
   {
@@ -359,12 +359,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Annual Certified Wage: 69945.39\n",
-      "Average Annual Denied Wage: 67137.34\n",
-      "Average Hourly Certified Wage: 31.37\n",
-      "Average Hourly Denied Wage: 29.42\n",
+      "Average Annual Certified Wage: 70013.45\n",
+      "Average Annual Denied Wage: 67187.47\n",
+      "Average Hourly Certified Wage: 30.78\n",
+      "Average Hourly Denied Wage: 27.08\n",
       "Prop Salaried Workers Denied: 0.02\n",
-      "Prop Hourly Workers Denied: 0.053\n"
+      "Prop Hourly Workers Denied: 0.052\n"
      ]
     }
    ],
