--- a/LCA Analysis Initial Filtering.ipynb
+++ b/LCA Analysis Initial Filtering.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "There's a massive amount of data in this .xlsx file (over 500,000 rows). It contains all LCA requests from the year 2014. My first goal is to extract it from Excel format, drop rows and columns that I won't need, and write it to a csv for easier access.\n",
     "\n",
-    "I originally planned to use the past 3 years of data, but that was simply too much for my 13\" Mac to handle. :("
+    "I originally planned to use the past 3 years of data, but that proved to be a bit too much data for my machine to handle at a reasonable pace. In the future, I'd like to explore the data over time with some of the insights gained from this analysis."
    ]
   },
   {
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Well, Yale seems to have proven that the street addresses and the ZIP codes are just as error prone as the company names (you can find a zip code with a letter in it, if you look hard enough). I'll go for the low-hanging fruit and deformat the EMPLOYER_NAME column for now. This should fix most of the issues with name mis-matches, but the key thing going forward will be to use functions such as .contains() rather than exact matches to perform searches."
+    "Well, Yale seems to show that the street addresses and the ZIP codes are just as error prone as the company names (you can find a zip code with a letter in it, if you look hard enough). I'll go for the low-hanging fruit and reformat the EMPLOYER_NAME column for now. This should fix most of the issues with name mis-matches, but the key thing going forward will be to use functions such as .contains() rather than exact matches to perform searches."
    ]
   },
   {
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also need to fix the ZIP Codes by removing values that aren't digits. There are also a few ZIP codes less than 00501 (the lowest ZIP in the country). I could search for the correct code, but in the intrest of time I'll just drop them (it's only a few rows)."
+    "We also need to fix the ZIP Codes by removing values that aren't digits. There are also a few ZIP codes less than 00501 (the lowest ZIP in the country). I could search for the correct code, but in the interest of time I'll just drop them (it's only a few rows)."
    ]
   },
   {
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's check the STATUS column. This is one of the most important columns, displaying the status of each LCA."
+    "Now, let's check the STATUS column. This column indicates whether an LCA was Certified, Withdrawn, or Denied."
    ]
   },
   {
@@ -368,9 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'm not sure whether INVALIDATED means WITHDRAWN or DENIED, so I'll drop that row (it's only 1 row). REJECTED should clearly be DENIED, however.\n",
-    "\n",
-    "I originally wanted to drop all the WITHDRAWN rows because they don't provide information about whether or not an LCA was approved, but I ultimately decided to keep them to better understand which companies and industries are applying for LCAs in the first place."
+    "I'm not sure whether INVALIDATED means WITHDRAWN or DENIED, so I'll drop that row (it's only 1 row). REJECTED should clearly be DENIED, however."
    ]
   },
   {
@@ -481,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The PW_1 (Prevailing Wage Rate) column looks fine now, but there's still a value of 200 in TOTAL_WORKERS. Since the 75% of that column is still 1, it's clearly an outlier - let's take a look..."
+    "The PW_1 (Prevailing Wage Rate) column looks fine now, but there's still a value of 200 in TOTAL_WORKERS. Since the 75th percentile of that column is still 1, it's clearly an outlier - let's take a look..."
    ]
   },
   {
@@ -558,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So TOTAL_WORKERS isn't an accurate metric, which is good to know. Going forward, I won't use this column."
+    "So TOTAL_WORKERS isn't an accurate metric (or at least I don't understand what it really means). Going forward, I won't use this column."
    ]
   },
   {
@@ -576,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point, I'm ready to write this dataframe to a csv. There are some non-ASCII characters here, so I'll need to set the encoding to utf-8."
+    "At this point, I'm ready to write this dataframe to a csv. There are some non-ASCII characters here, so I'll need to set the encoding to utf-8 (this got me hung up for a while)."
    ]
   },
   {
