--- a/LCA Exploratory Analysis 1.ipynb
+++ b/LCA Exploratory Analysis 1.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'll start by just plotting histograms of yearly and hourly wages. For the yearly wages, I'll use a log10 trasnform to normalize the distribution."
+    "I'll start by just plotting histograms of yearly and hourly wages. For the yearly wages, I'll use a log10 transform to normalize the distribution."
    ]
   },
   {
@@ -190,7 +190,9 @@
     "collapsed": true
    },
    "source": [
-    "That looks much better. Let's try again without the top 1%."
+    "That looks much better. Let's try again without the top 1%. \n",
+    "\n",
+    "Note: Without the top 1%, the wages of most workers fall into a normal distribution by themselves."
    ]
   },
   {
@@ -234,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It appears that H1B applicant salaries tend to skew right. It also seems that they are paid considerably higher than the national mean of ~$43,000 anually. This is expected though, since companies wouldn't bother sponsoring just anyone to get an H1B. Though it's not fair to compare all H1B applicants to all US residents, it would be interesting to see the difference in wage when taking account of both job title and work location. For now, let's get some stats on this data to verify my observations."
+    "It appears that LCA salaries tend to skew right. It also seems that they are paid considerably higher than the national average. This is expected though, since companies wouldn't bother sponsoring just anyone to get an H1B. Though it's not fair to compare all H1B applicants to all US residents, it would be interesting to see the difference in wage when taking account of both job title and work location. For now, let's get some stats on this data to verify my observations."
    ]
   },
   {
@@ -278,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The salaried workers are the overwhelming majority, and they make considerably more than the national average. I wonder what the typical delta between H1B wages and national averages are. I have two datasets from the Bureau of Labor Statistics, national and state, that give the wage information of each occupation (listed by SOC_CODE). I'm also going to remove the top 1% of wages from our dataset as those are most often outliers or just erroneous."
+    "The salaried workers are the overwhelming majority, and they make considerably more than the national average. I wonder what the typical delta between LCA wages and national averages are. I have two datasets from the Bureau of Labor Statistics, national and state, that give the wage information of each occupation (listed by SOC_CODE). I'm also going to remove the top 1% of wages from our dataset as those are most often outliers or just erroneous."
    ]
   },
   {
@@ -729,7 +731,7 @@
    "source": [
     "It's Nike - which is based out of Oregon too! Remember that OR was the state with the highest delta value as well. Now this doesn't necessarily mean that Nike pays immigrant workers better than residents. Nike is by far the largest company in the state, and it's more likely that it simply pays all of its employees very well by state standards.\n",
     "\n",
-    "While we're on the topic, let's look at deltas by company. I know I'll be missing some data due to variations in company name (see \"NIKE INC\" vs \"NIKE USA INC\" above), but with the puncuation removed, I feel that I'll capture enough data to make some interesting observations. Furthermore, I'll limit this to larger companies which submitted at least 250 applications."
+    "While we're on the topic, let's look at deltas by company. I know I'll be missing some data due to variations in company name (see \"NIKE INC\" vs \"NIKE USA INC\" above), but with the punctuation removed, I feel that I'll capture enough data to make some interesting observations. Furthermore, I'll limit this to larger companies which submitted at least 250 applications."
    ]
   },
   {
@@ -812,7 +814,7 @@
    "source": [
     "Nike certainly pays very well compared to other companies in Oregon, but even on a national level, it pays H1B applicants within a percent of the average for their job type.\n",
     "\n",
-    "Finally, let's look at the acutal jobs themselves and see what the deltas look like. I'll set the minimum number of data points to be 100."
+    "Finally, let's look at the actual jobs themselves and see what the deltas look like. I'll set the minimum number of data points to be 100."
    ]
   },
   {
@@ -863,6 +865,8 @@
     "This is really interesting. Doctors and Surgeons are typically making less than half of their domestic counterparts! With the exception of Personal Financial Advisors, all of the bottom five occupations require a doctorate. Compare with the top five, which don't (with the exception of Pharmacists - interesting how they avoid the pay drop of other medical professionals).\n",
     "\n",
     "Why is this? That would be another project on its own, but my guess is that for very high-skill professions, H1B applicants prioritize immigrating to the US and accept massive pay-cuts. Their domestic counterparts, who don't require sponsorship to come to the US, go on to command much higher salaries.\n",
+    "\n",
+    "**Note** This was my initial theory. I later rationalize that some job opportunities which are unavailable for foreigners (private practice & government contractors), are responsible for the large gap. I go into this in the final presentation.\n",
     "\n",
     "At this point, I believe I've looked at the wage information enough. I made some very interesting discoveries (particularly the deltas by job), but it's time to look at some other aspects of the data. Let's wrap up by writing the original delta dataframe to a csv for storage (the one with denied and withdrawn applications included)."
    ]
