--- a/LCA Exploratory Analysis 2.ipynb
+++ b/LCA Exploratory Analysis 2.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's really interesting. I'd expect a few companies to be responsible for the lion's share of applications, but I'm suprised at how dominant the IT industry and India are. Infosys alone nearly accounts for 5% of applicants.\n",
+    "That's really interesting. I'd expect a few companies to be responsible for the lion's share of applications, but I'm surprised at how dominant the IT industry and India are. Infosys alone nearly accounts for 5% of applicants.\n",
     "\n",
     "As a quick aside, how do some of our Silicon Valley favorites stack up?"
    ]
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How about applications by state? Let's see where most of these applicants would be working (if their H1B is approved)."
+    "How about applications by state? Let's see where most of these applicants would be working (if their LCA is approved)."
    ]
   },
   {
