--- a/LCA Exploratory Analysis 3.ipynb
+++ b/LCA Exploratory Analysis 3.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LCA Exploratory Analysis 3 - Who's being rejected and why?"
+    "# LCA Exploratory Analysis 3 - Who's being rejected and why?\n",
+    "\n",
+    "## Not included in final analysis report.\n",
+    "Although I identified a pattern in wages and rejections, no other great insights were had and because only ~2% of apps are rejected, there isn't much useful information to be had here."
    ]
   },
   {
@@ -257,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hmmm, \"Offices of Lawyers\" and \" Legal Services\" seem to have the wost luck getting certified, while manufacturing industries such as \" Engine, Turbine, and Power Transmission Equipment Manufacturing\" and \"Other Communications Equipment Manufacturing\" are very safe. Perhaps there are specific jobs related to these industries that can tell me more."
+    "Hmmm, \"Offices of Lawyers\" and \" Legal Services\" seem to have the worst luck getting certified, while manufacturing industries such as \" Engine, Turbine, and Power Transmission Equipment Manufacturing\" and \"Other Communications Equipment Manufacturing\" are very safe. Perhaps there are specific jobs related to these industries that can tell me more."
    ]
   },
   {
@@ -307,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Those in media, design, and administration are most likely to be rejected, while applicants in tech and engineering fields, along with postsecondary teachers (read: university employees) don't have much of a problem. I'm not surpirsed that the engineering and univeristy workers don't have much trouble, though the jobs that are least likely to be certified don't match the industry with the most trouble (Law).\n",
+    "Those in media, design, and administration are most likely to be rejected, while applicants in tech and engineering fields, along with postsecondary teachers (read: university employees) don't have much of a problem. I'm not surprised that the engineering and university workers don't have much trouble, though the jobs that are least likely to be certified don't match the industry with the most trouble (Law).\n",
     "\n",
     "Let's look at part time vs. full time next."
    ]
