--- a/Labor Condition Applications Analysis.ipynb
+++ b/Labor Condition Applications Analysis.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "As part of the H1B Visa application process, each sponsoring company must submit a Labor Condition Application (LCA) to the United States Department of Labor. With this application, the employer must show, amongst other things, that the non-immigrant worker who is applying for the H1B is being paid similarly to employees at the company doing the same work, and is receiving the prevailing wage for that occupation in the geographical area.\n",
     "\n",
-    "The Department of Labor provides a record of all submitted LCAs each year [on their website.](http://www.foreignlaborcert.doleta.gov/performancedata.cfm#dis) Along with general wage information from the department's [Bureau of Labor Statistics,](http://www.bls.gov/soc/) I've analyzed the data from 2014 to determine trends in LCA wages and the number of applicantions.\n",
+    "The Department of Labor provides a record of all submitted LCAs each year [on their website.](http://www.foreignlaborcert.doleta.gov/performancedata.cfm#dis) Along with general wage information from the department's [Bureau of Labor Statistics,](http://www.bls.gov/soc/) I've analyzed the data from 2014 to determine trends in LCA wages and the number of applications.\n",
     "\n",
     "The data used in this notebook, though downloaded from open sources, has been pre-processed by myself. To see the steps I took in doing so, please see the other associated notebook files. In many cases, outliers have been removed from the data regardless of whether they were the result of errors in the data or actually extreme values. Because this analysis is focused on broad trends in the hundreds of thousands of applicants from 2014, omitting these values will not negatively impact my analysis. "
    ]
@@ -75,9 +75,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Wage Analysis\n",
+    "## Part I - Wage Analysis\n",
     "\n",
-    "Although the Department of Labor (DOL) states that H1B applicants must be paid similiarly to their domestic counterparts, I was curious to see if this was true in all cases. Furthermore, I wanted to see if there were any trends in this data, such as specific employers, industries, or occupations paying foreign workers differently."
+    "Although the Department of Labor (DOL) states that H1B applicants must be paid similarly to their domestic counterparts, I was curious to see if this was true in all cases. Furthermore, I wanted to see if there were any trends in this data, such as specific employers, industries, or occupations paying foreign workers differently."
    ]
   },
   {
@@ -149,7 +149,7 @@
     "\n",
     "plt.subplot(212)\n",
     "plt.hist(hourly_wages.values, bins=100, color=\"#0868ac\")\n",
-    "plt.xlabel(\"Hourly Salary\", fontsize=15)\n",
+    "plt.xlabel(\"Hourly Wage\", fontsize=15)\n",
     "plt.ylabel(\"Number of Applicants\", fontsize=15)\n",
     "plt.grid(True)\n",
     "plt.axvline(x=20.62, ymin=0, ymax=2500, color=\"red\", ls=\"--\", linewidth=\"3\")\n",
@@ -173,7 +173,7 @@
     "\n",
     "Again, these graphs are not a fair representation of the wages of foreign vs. domestic workers. A more accurate metric would be the difference in wage between workers from the same state performing the same job. Each application has a Standard Occupational Classification (SOC) code which states the job function of the applicant. The Bureau of Labor Statistics also has data on the average wages for each of these codes in each state. Using these values, I can calculate the difference from the average, or delta ($\\Delta$) for each applicant as a percentage. This will be the metric I use to analyze the wages of H1B applicants.\n",
     "\n",
-    "Note: For analysing wages, I will only be examining applications that were certified by the Department of Labor."
+    "Note: For analyzing wages, I will only be examining applications that were certified by the Department of Labor."
    ]
   },
   {
@@ -703,7 +703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alabama seems to pay foreign workers considerably worse than most states, while Oregon, though still averaging -16.5%, tends to pay H1B workers the closest to their domestic counterparts. At this point, I can safely say that despite the LCA, foreign workers are *not* being paid the same as Americans. That said, individual industries and occupations show a wide range of wage dicrepancy, regardless of state.\n",
+    "Alabama seems to pay foreign workers considerably worse than most states, while Oregon, averaging -16.5%, tends to pay H1B workers the closest to their domestic counterparts. In addition, individual industries and occupations show a wide range of wage discrepancy, regardless of state.\n",
     "\n",
     "Although the best paying industry is an outlier (which I will explore shortly), the difference in Delta between the two worst and two next best industries is still substantial."
    ]
@@ -822,15 +822,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, we see Doctors and Scientists being paid **considerably** below average. In the case of Physicians and Surgeons, over 50% below the state average. How can this be possible, given that the purpose of the LCA is to ensure that foreign workers are paid similarly to their domestic counterparts? Are hospitals really paying foreign Doctors less than half of their American colleagues? Do Stanford and Harvard discriminate against foreign Scientists?\n",
+    "Again, we see doctors and scientists being paid **considerably** below average. In the case of Physicians and Surgeons, over 50% below the state average. How can this be possible, given that the purpose of the LCA is to ensure that foreign workers are paid similarly to their domestic counterparts? Are hospitals really paying foreign doctors less than half of their American colleagues? Do Stanford and Harvard discriminate against foreign scientists?\n",
     "\n",
-    "Remember that the metric we are using, Average Wage Delta, only shows the difference in wage based on occupation. This metric is limited because people in the same occupation can work in different industries and at different companies, some of which **are not available to foreign workers.** The biggest examples of these are Private Medical Practices and Government Contractors.\n",
+    "Remember that the metric we are using, Average Wage Delta, only shows the difference in wage based on occupation. This metric is limited because people in the same occupation can work in different industries and at different companies, some of which **are not available to foreign workers.** The biggest examples of these are private medical practices and government contractors.\n",
     "\n",
-    "In the case of Medical Professionals, those who work in or own their own private practice make considerably more money than those working at hospitals. However, this option is not availble to H1B applicants, as they require a company (such as a hospital) to sponsor them. As such, foreign Doctors are forced to work the lowest-paying options in the field. This theory is supported by the fact that Pharmacists, Medical Professionals who typically do not work at private practices, show some of the lowest Wage Deltas.\n",
+    "In the case of medical professionals, those who work in or own their own private practice make considerably more money than those working at hospitals. However, this option is not availble to H1B applicants, as they require a company (such as a hospital) to sponsor them. As such, foreign doctors are forced to work the lowest-paying options in the field. This theory is supported by the fact that pharmacists, medical professionals who typically do not work at private practices, show some of the lowest Wage Deltas.\n",
     "\n",
     "For scientists, the highest-paid positions are in private industry. However, these positions often involve working on government contracts (such as research positions at Lockheed Martin), which require US Citizenship. Because foreign workers are barred from these positions, their primary option is to work at the universities, which pay far less for the same work.\n",
     "\n",
-    "Much like when the footware industry seemed to overpay foreign workers because Nike was the largest employer in the state and the largest employer in that industry, it is important to recognize the limitations of our metrics when performing analysis.\n",
+    "Much like when the footwear industry seemed to overpay foreign workers because of Nike, it is important to recognize the limitations of our metrics when performing analysis.\n",
     "\n",
     "Finally, let's examine individual companies. Although we now know to expect universities and hospitals at the bottom, it would be interesting to see if any large companies pay foreign workers particularly well. For this final bit of analysis, I will only examine companies that filled at least 250 applications. Note that this excludes Nike, which would otherwise be far ahead of the competition."
    ]
@@ -892,16 +892,32 @@
    "source": [
     "As expected, universities and research institutions filled the bottom five slots. The top five large companies actually show a positive Wage Delta though. These particular companies are major players in the tech and consulting industries, but the overall data shows an interesting trend.\n",
     "\n",
-    "Almost all H1B applicants are working for less than their American counterparts. However, those in the private sector, particularly in manufacturing, tech, consulting, and finance, are paid much closer to the average of their occupational group. Those who take the biggest hit are also the most skilled and highly educated applicants: Physicians and Scientists. Workers in those fields simply cannot earn their full potential while still requiring sponsorship. This presents a big opportunity for the private sector.\n",
-    "\n",
-    "There is always demand for highly skilled and intelligent workers, regardless of field. For years, Wall Street has been known to hire Physicists and other highly technical workers with PhDs to perform quantitative analysis. Today, Silicon Valley has an even greater demand for people with these backgrounds. Finding this sort of talent domestically can be a significant challenge, due to both the scarcity of people with such an education, and also their hesitance to cross over to a new field. Doctors especially, would be difficult to recruit to a Biotech firm. When one has a choice between making \\$500,000 a year at their own practice, or joining an unfamiliar industry for less, the option is not tempting. When the choice is between crossing over to a new industry or working at a hospital for just over \\$100,000, there may be some great opportunities for everyone involved."
+    "Almost all H1B applicants are working for less than their American counterparts. However, those in the private sector, particularly in manufacturing, tech, consulting, and finance, are paid much closer to the average of their occupational group. Those who take the biggest hit are physicians and scientists. Workers in those fields simply cannot earn their full potential while still requiring sponsorship."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Applicant Density\n",
+    "### Conclusion - Wages\n",
+    "First and foremost, this data shows two overarching trends in H1B applicant wages:\n",
+    "1. They are typically paid more than the average American.\n",
+    "2. They are, in the vast majority of cases, paid less than Americans performing the same work.\n",
+    "\n",
+    "The first trend can be explained by the tendency for companies to hire foreign workers for skilled positions (this will be explored in the next section). The latter is also expected because foreign workers are typically in a less advantageous position when negotiating their pay because their employer is sponsoring their Visa. While an American can simply take a better paying offer at another company, a foreign worker would have to reapply for an H1B to do so. That said, both of these trends are essentially common knowledge. What is interesting about this data are the wage trends in specific industries and occupations.\n",
+    "\n",
+    "In particular, there are two groups of foreign workers making 40% less than their American equivalents: doctors and scientists. As discussed previously, this is likely due to the fact that their most profitable means of employment require citizenship, or at least permanent residency. I believe that this presents an opportunity for companies (particularly smaller ones) in similar sectors to hire highly skilled workers for a lower cost and for these foreign workers to earn more.\n",
+    "\n",
+    "US companies are known to hire workers with advanced degrees from sometimes unrelated fields to perform high-skill labor. For years, Wall Street hired physicists and other scientists to perform quantitative analysis. Today, Silicon Valley has a similar demand for high-skill labor. Companies such as Google and Goldman Sachs are willing to pay these employees very high salaries, but smaller companies might have difficulty finding this sort of talent given the size of their bankrolls.\n",
+    "\n",
+    "Consider a digital health startup in need of doctors. An experienced American doctor can make several hundred thousand dollars with their own private practice, which is more than most small companies can pay in salary. Foreign doctors, however, make considerably less at public hospitals and could potentially earn more by working at the startup. This mutually beneficial relationship between small companies and highly skilled foreigners can change some of the dynamics in places such as the Bay Area and is certainly worth exploring further."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part II - Applicant Density\n",
     "\n",
     "Next, I wanted to understand more about the quantity of applications. Who's hiring? Where are these workers going? What will they be doing? Although the general trends are well known to most, the actual numbers are quite surprising in many cases."
    ]
@@ -1500,7 +1516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Naturally, the largest state (CA) has the most applicants, but some other states are very popular, such as New Jersey and Virginia. Note that the provided data specifices the state in which the applicant will work, so those numbers from New Jersey are not commuters that work in New York. This is especially surpising when considering the fact that New Jersey received more applicants than Illinois, where Chicago is located, and is the overall 4th ranked state by number of applicants. Furthermore, Virginia showed the second-greatest difference in wages (Delta) between foreign and domestic workers. I am curious as to what sorts of jobs H1B applicants are taking in NJ and VA, but first I want to examine the industries and occupations which are most common, then drill down from there."
+    "Naturally, the largest state (CA) has the most applicants, but some other states are very popular, such as New Jersey and Virginia. Note that the provided data specifies the state in which the applicant will work, so those numbers from New Jersey are not commuters that work in New York. This is especially surprising when considering the fact that New Jersey received more applicants than Illinois, where Chicago is located, and is the overall 4th ranked state by number of applicants. Furthermore, Virginia showed the second-greatest difference in wages (Delta) between foreign and domestic workers. I am curious as to what sorts of jobs H1B applicants are taking in NJ and VA, but first I want to examine the industries and occupations which are most common, then drill down from there."
    ]
   },
   {
@@ -1578,7 +1594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although I originally pulled the data from the top ten industries (by NAICS Code), I combined industries that were very similar to each other before analysing the data. I had expected the software and computer companies to be a large source of applications, I did not expect them to account for over **half** of all applications in 2014. Universities comprise a fairly large section of the applicant pool as well, but tech absoutely dwarfs all other industries by a massive margin.\n",
+    "Although I originally pulled the data from the top ten industries (by NAICS Code), I combined industries that were very similar to each other before analyzing the data. I had expected the software and computer companies to be a large source of applications, I did not expect them to account for over **half** of all applications in 2014. Universities comprise a fairly large section of the applicant pool as well, but tech absolutely dwarfs all other industries by a massive margin.\n",
     "\n",
     "Examining the density of applications by occupation type shows the same trend."
    ]
@@ -1702,7 +1718,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It turns out that New Jersey actually receives a very large number of foreign Computer Programmers relative to its population. Virginia beats Texas in most of these categories as well, and even California in number of programmers, but is not as much of a standout as New Jersey. This metric is a litle unfair to California, the home of Silicon Valley, due to its large population, but that does not detract from the fact that New Jersey is seeing a large influx of foreign tech-talent. Any company looking for workers with these sorts of backgrounds would do well to look at The Garden State, given the relatively low wages and large pool of incoming talent."
+    "It turns out that New Jersey actually receives a very large number of foreign Computer Programmers relative to its population. Virginia beats Texas in most of these categories as well, and even California in number of programmers, but is not as much of a standout as New Jersey. This metric is a little unfair to California due to its large population, but that does not detract from the fact that New Jersey is seeing a large influx of foreign tech-talent. Given this data, it may be viable for some medium sized companies in need of programmers to consider expanding to the Garden State, especially considering that NJ had one of the greatest Wage Deltas (from Section I) of any state."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Conclusion - Density\n",
+    "\n",
+    "To me, the most surprising fact about applicant density is that over 50% of applicants are in computer-related industries. While this does not necessarily mean that 50% of H1B visas are awarded to computer and software professionals (the LCA is just one part of the H1B application process), it does provide a sense of where most of the demand is. While on the topic of demand, I also found the sheer volume of applications from some companies fascinating. Infosys, for example, was the source of nearly 1 in 20 LCA applications for the *entire* country in 2014. While the dominance of tech in hiring foreign workers may not be new information for many, the information extracted in this section can serve as a basis for future analysis. One could gain insights about the future performance of a company or industry by examining their foreign hiring trends across several years, for example."
    ]
   }
  ],
